k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
spec:
  replicas: 4
  selector:
    matchLabels:
      app: wisecow
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0       # never exceed 4 pods
      maxUnavailable: 1 # update one pod at a time
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: harishasapu/wisecow:db2a5d33a14d89197a89b008048057df7d5ddba3
        ports:
        - containerPort: 4499
