k8s/wisecow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: harishasapu/wisecow:975352ae930244dd7f351d6a06cbaade7fea8ee2
        imagePullPolicy: Never   # <- Add this line
        ports:
        - containerPort: 4499
