k8s/wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow
spec:
  type: NodePort
  selector:
    app: wisecow   # must match deployment pod labels
  ports:
    - port: 80         # This is what the Ingress will hit
      targetPort: 4499 # Container listens on 4499
      nodePort: 30000  # Optional NodePort if you want external access
