k8s/wisecow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: harishasapu/wisecow:096dccfa8003a95bf4efc65ec570ceff8c3beafc
        imagePullPolicy: Always
        ports:
        - containerPort: 4499

---
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  labels:
    app: wisecow
spec:
  type: NodePort
  selector:
    app: wisecow
  ports:
  - port: 4499
    targetPort: 4499
    nodePort: 30001

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - harishargo.duckdns.org
    secretName: wisecow-tls
  rules:
  - host: harishargo.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-service
            port:
              number: 4499
